Add walletAddress to currency assets

--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -2,7 +2,7 @@
 <div #hideWalletMenuLayer (click)="hideWalletMenuIfAnyOpen(hideWalletMenuLayer)" class="d-none layer-for-hiding-add-wallet-menu"></div>
 <div class="row">
     <div class="col-12">
-        <h5>Track automatically balance of many wallets in one place</h5>
+        <h5>Track wallet balances automatically</h5>
         <div class="card mb-3">
             <div (click)="goToAddNewWalletView()" class="card-header wallet-add-header">
                 <button class="btn btn-primary btn-sm">
