--- a/src/app/layout/balances/currency/user-currency-asset-balance.component.html
+++ b/src/app/layout/balances/currency/user-currency-asset-balance.component.html
@@ -2,7 +2,7 @@
 <div #hideUserCurrencyMenuLayer (click)="hideUserCurrencyMenuIfAnyOpen(hideUserCurrencyMenuLayer)" class="d-none layer-for-hiding-add-wallet-menu"></div>
 <div class="row">
     <div class="col-12">
-        <h5>Track your currency assets with provided balances</h5>
+        <h5>Track your currency assets with balances provided by you</h5>
         <div class="card mb-3">
             <div (click)="goToAddNewUserCurrencyAssetView()" class="card-header currency-asset-add-header">
                 <button class="btn btn-primary btn-sm">
