--- a/src/app/layout/balances/currency/edit/user-currency-asset-add.component.html
+++ b/src/app/layout/balances/currency/edit/user-currency-asset-add.component.html
@@ -18,7 +18,7 @@
                     <button disabled class="btn btn-sm btn-default">
                         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                     </button>
-                    <span>Edit your currency asset</span>
+                    <span> Edit your currency asset</span>
                 </ng-container>
             </div>
             <div class="card-body">
@@ -65,13 +65,24 @@
                                 <small id="userCurrencyBalanceInputHelp" class="form-text text-muted">e.g. '6.56'</small>
                             </div>
                             <div class="form-group">
+                                <label for="walletAddressInput">Public wallet address</label>
+                                <input type="text" class="form-control"
+                                       [(ngModel)]="walletAddressInput"
+                                       id="walletAddressInput"
+                                       name="walletAddressInput"
+                                       aria-describedby="walletAddressInputHelp">
+                                <small id="walletAddressInputHelp" class="form-text text-muted">
+                                    Optional. Balance is not synchronized automatically, but it might be in the future. You might see link to your wallet on the assets list
+                                </small>
+                            </div>
+                            <div class="form-group">
                                 <label for="userCurrencyDescriptionInput">Description</label>
                                 <input type="text" class="form-control"
                                        [(ngModel)]="userCurrencyDescriptionInput"
                                        id="userCurrencyDescriptionInput"
                                        name="userCurrencyDescriptionInput"
                                        aria-describedby="userCurrencyDescriptionInputHelp">
-                                <small id="userCurrencyDescriptionInputHelp" class="form-text text-muted">Optional. Something that will help you remind where you keep it or what it is for. e.g. 'staked at yield app', 'at binance', 'printed on piece of paper and kept in safe place'</small>
+                                <small id="userCurrencyDescriptionInputHelp" class="form-text text-muted">Optional. Something that will help you remind where you keep it or what it is for. e.g. 'staked at yield app', 'at https://binance.com', 'printed on piece of paper and kept in safe place'</small>
                             </div>
                         </ng-container>
 
