--- a/src/app/layout/balances/currency/user-currency-asset-balance.component.html
+++ b/src/app/layout/balances/currency/user-currency-asset-balance.component.html
@@ -125,7 +125,9 @@
                                     <a target="_blank" href="{{userCurrencyAsset.blockChainExplorerUrl}}">{{userCurrencyAsset.walletAddress}}</a>
                                 </span>
                                 </td>
-                                <td [innerHTML]="userCurrencyAsset.description | linkify">
+                                <td>
+                                    <span *ngIf="userCurrencyAsset.description != null" [innerHTML]="userCurrencyAsset.description | linkify"></span>
+                                    <span *ngIf="userCurrencyAsset.description == null" class="text-muted">N/A</span>
                                 </td>
                                 <td>
                                     {{userCurrencyAsset.balance}}
